--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 
     <modules>
         <module>msvc-compras</module>
+        <module>msvc-usuario</module>
+        <module>msvc-inventario</module>
+        <module>msvc-factura</module>
     </modules>
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
